lowered line length to avoid overlap

--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,7 @@ body {
 /* Line */
 
 .line-mid-point {
-  border: solid white 1px;
-  height: 0;
   position: absolute;
-  width: 0;
 }
 
 .line {
